# embed-service

./: Cargo.toml  Dockerfile  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: docker-build-and-publish.yaml
embed-sdk/: Cargo.toml  README.md  index.d.ts
embed-sdk/src/: lib.rs  v1.rs
embed-server/: .env  Cargo.toml  README.md  build.rs  config.prod.toml  config.toml
embed-server/src/: cache.rs  error.rs  main.rs  state.rs  util.rs
embed-server/src/cache/: mod.rs  storage.rs
embed-server/src/cache/storage/: mod.rs  redb.rs  redis.rs  sqlite.rs
embed-server/src/config/: header.rs  mod.rs  pattern.rs  selectors.rs
embed-server/src/extractors/: deviantart.rs  furaffinity.rs  generic.rs  imgur.rs  inkbunny.rs  mod.rs  wikipedia.rs
embed-server/src/extractors/bluesky/: mod.rs  models.rs
embed-server/src/extractors/e621/: mod.rs  models.rs
embed-server/src/extractors/generic/: mod.rs  resolve_media.rs  scrape_fields.rs  web_manifest.rs
embed-server/src/parser/: embed.rs  feed.rs  html.rs  mod.rs  oembed.rs  patterns.rs  quirks.rs
