[workspace]
members = ["embed-sdk", "embed-server"]
resolver = "2"

[patch.crates-io]
smol_str = { git = "https://github.com/novacrazy/smol_str" }
iso8601-timestamp = { git = "https://github.com/Lantern-chat/iso8601-timestamp" }
rkyv = { git = "https://github.com/Lantern-chat/rkyv", branch = "0.7" }

