[package]
name = "embed-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "client-sdk-common", git = "https://github.com/Lantern-chat/client-sdk-rs" }

serde = { version = "1.0.163", features = ["derive"] }
smol_str = { version = "0.2.0", features = ["serde"] }
timestamp = { package = "iso8601-timestamp", version = "0.2" }
serde_shims = { version = "0.2", features = ["bitflags"] }

postgres-types = { version = "0.2.1", optional = true }
bytes = { version = "1", optional = true }
rusqlite = { version = "0.29.0", optional = true }

schemars = { version = "0.8.12", optional = true }
thin-vec = { version = "0.2.12", optional = true, features = ["serde"] }
typed-builder = { version = "0.15.0", optional = true }
bitflags = "1.2"

[features]
default = ["thin-vec"]
schemars = ["dep:schemars", "common/schemars"]
pg = ["postgres-types", "bytes"]
