[package]
name = "embed-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache 2.0"

[dependencies]
common = { package = "client-sdk-common", git = "https://github.com/Lantern-chat/client-sdk-rs" }

serde = { version = "1.0.163", features = ["derive"] }
rkyv = { version = "0.7", optional = true, default-features = false, features = ["smol_str", "validation"] }
smol_str = { version = "0.2.0", features = ["serde"] }
timestamp = { package = "iso8601-timestamp", version = "0.2" }

postgres-types = { version = "0.2.1", optional = true }
bytes = { version = "1", optional = true }
rusqlite = { version = "0.31.0", optional = true }

schemars = { version = "0.8.12", optional = true }
typed-builder = { version = "0.18.0", optional = true }
bitflags = "2"

[dev-dependencies]
rkyv = "0.7"

[features]
# default = ["rkyv"]
schemars = ["dep:schemars", "common/schemars"]
pg = ["postgres-types", "bytes"]
rkyv = ["dep:rkyv", "common/rkyv", "timestamp/rkyv"]
