[package]
name = "embed-sdk"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache 2.0"

[dependencies.client-sdk]
git = "https://github.com/Lantern-chat/client-sdk-rs"
default_features = false
features = []

[dependencies]
iso8601-timestamp = "0.3.0"
smol_str = "0.3"

# These also enable features of iso8601-timestamp and smol_str
[features]
schemars = ["client-sdk/schema"]
rkyv = ["client-sdk/rkyv"]
typed_builder = ["client-sdk/typed-builder"]
bon = ["client-sdk/bon"]
pg = ["client-sdk/pg"]
rusqlite = ["client-sdk/rusqlite"]
