[package]
name = "embed-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["novacrazy <novacrazy@gmail.com>"]

[features]
default = ["json-simd", "cache_redis", "cache_rusqlite", "cache_redb"]
cache_redis = ["fred"]
cache_rusqlite = ["r2d2_sqlite", "r2d2", "blake3"]
cache_redb = ["redb"]
cache_pg = ["tokio-postgres", "deadpool-postgres"]

sonic_json = ["sonic-rs", "ftl/json-simd"]
json-simd = ["sonic_json"]

# cache_pg = ["cache", "tokio-postgres"]

[dependencies]
embed = { package = "embed-sdk", path = "../embed-sdk" }

ftl = { git = "https://github.com/Lantern-chat/ftl2", default-features = false, features = ["json"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "gzip", "brotli", "deflate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


bytes = "1"
hashbrown = { version = "0.15", features = ["inline-more", "serde"] }
imagesize = "0.13.0"
base64 = "0.22"
hmac = "0.12.1"
sha1 = "0.10.5"
hex = "0.4.3"
thiserror = "2"
dotenv = "0.15"
futures-util = "0.3.25"
memchr = "2.5.0"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive", "rc"] }
regex = "1"
toml = "0.8"
async-trait = "0.1.64"
url = "2"
monostate = "0.1"
ahash = "0.8"
smol_str = "0.3"
heck = "0.5"
mime_guess = "2.0.4"
arc-swap = "1.7.0"
scraper = { version = "0.21", default-features = false }
once_cell = "1.17.1"
ego-tree = "0.9"
serde_repr = "0.1.7"
regex-automata = { version = "0.1.10", default-features = false }
smallvec = "1.7.0"
csscolorparser = { version = "0.7", default-features = false, features = ["named-colors"] }
html-escape = { version = "0.2.13", default-features = false }
feed-rs = "2"
triomphe = "0.1"
scc = "2"

serde_json = "1"
sonic-rs = { version = "0.3.6", optional = true }

fred = { version = "10.0", optional = true, features = ["serde-json"] }

r2d2 = { version = "0.8.0", optional = true }
r2d2_sqlite = { version = "0.25.0", optional = true, features = ["bundled"] }
blake3 = { version = "1.5.1", optional = true }

redb = { version = "2.0", optional = true }


# redis = { version = "0.25.3", optional = true, features = ["tokio-comp", "ahash", "connection-manager"] }

aho-corasick = "1.1.3"
regex-build = { git = "https://github.com/Lantern-chat/regex-build" }
[build-dependencies]
regex-build = { git = "https://github.com/Lantern-chat/regex-build", features = ["build"] }
